Removed 'httpe', and added some new cool L7 security modules.